updating to remove the build alias for now

--- a/now.json
+++ b/now.json
@@ -1,7 +1,7 @@
 {
   "version": 2,
   "name": "SandBarAndIslandGrill",
-  "alias": "sandbarandislandgrill.com",
+  "_alias": "sandbarandislandgrill.com",
   "env": {
     "SENTRY_DSN": "TODO"
   },
