--- a/www/package.json
+++ b/www/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "next ./src -p 8000",
-    "build": "next build ./src",
-    "start": "next start ./src",
+    "dev": "next ./ -p 8000",
+    "build": "next build ./www",
+    "start": "next start ./www",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -19,9 +19,9 @@
     "next-with-apollo": "^3.3.2",
     "nprogress": "^0.2.0",
     "polished": "^2.3.3",
-    "react": "^16.7.0",
+    "react": "^16.8.6",
     "react-apollo": "^2.4.1",
-    "react-dom": "^16.7.0",
+    "react-dom": "^16.8.6",
     "react-scroll-parallax": "^1.3.5",
     "styled-components": "^4.1.3",
     "styled-components-modifiers": "^1.1.0"
