--- a/www/package.json
+++ b/www/package.json
@@ -13,6 +13,7 @@
   "license": "GNU GPLv3",
   "dependencies": {
     "apollo-boost": "^0.1.27",
+    "google-map-react": "^1.1.4",
     "graphql": "^14.1.1",
     "moment": "^2.24.0",
     "next": "^7.0.2",
