--- a/www/package.json
+++ b/www/package.json
@@ -23,6 +23,7 @@
     "react": "^16.8.6",
     "react-apollo": "^2.4.1",
     "react-dom": "^16.8.6",
+    "react-facebook": "^8.0.4",
     "react-scroll-parallax": "^1.3.5",
     "styled-components": "^4.1.3",
     "styled-components-modifiers": "^1.1.0"
