--- a/graph/package.json
+++ b/graph/package.json
@@ -1,5 +1,5 @@
 {
-  "main": "server.js",
+  "main": "index.js",
   "version": "1.0.0",
   "scripts": {
     "start": "",
@@ -9,8 +9,9 @@
     "node": "^10"
   },
   "dependencies": {
-    "apollo-server": "^2.4.8",
-    "graphql": "^14.1.1"
+    "apollo-server-micro": "^2.6.4",
+    "graphql": "^14.3.1",
+    "graphql-import": "^0.7.1"
   },
   "devDependencies": {},
   "name": "sandbargraph",
