--- a/graph/package.json
+++ b/graph/package.json
@@ -9,15 +9,16 @@
     "node": "^10"
   },
   "dependencies": {
-    "apollo-server-micro": "^2.6.4",
+    "apollo-server-micro": "^2.9.3",
     "esm": "^3.2.25",
-    "graphql": "^14.3.1",
-    "graphql-import": "^0.7.1"
+    "graphql": "^14.5.4",
+    "graphql-import": "^0.7.1",
+    "micro-cors": "^0.1.1"
   },
   "devDependencies": {
     "micro": "^9.3.4",
     "microrouter": "^3.1.3",
-    "nodemon": "^1.19.1"
+    "nodemon": "^1.19.2"
   },
   "name": "sandbargraph",
   "license": "GNU GPLv3",
