converts off esm, enables graph api, updates apollo client to consume

--- a/now.json
+++ b/now.json
@@ -7,13 +7,15 @@
   "builds": [
     {
       "src": "graph/index.js",
-      "use": "@now/node@canary",
-      "includeFiles": ["**/*.graphql"]
+      "use": "@now/node",
+      "config": {
+        "includeFiles": ["**/*.graphql"]
+      }
     },
     { "src": "www/package.json", "use": "@now/next" }
   ],
   "routes": [
-    { "src": "/graph", "dest": "/graph/index.js" },
+    { "src": "/graphql", "dest": "/graph/index.js" },
     { "src": "/(.*)", "dest": "/www/$1" }
   ]
 }
