--- a/graph/package.json
+++ b/graph/package.json
@@ -2,21 +2,20 @@
   "main": "index.js",
   "version": "1.0.0",
   "scripts": {
-    "start": "",
-    "start:watch": "nodemon -r esm ./server.js -e js,graphql"
+    "start": "micro",
+    "start:watch": "micro-dev"
   },
   "engines": {
     "node": "^10"
   },
   "dependencies": {
     "apollo-server-micro": "^2.9.3",
-    "esm": "^3.2.25",
     "graphql": "^14.5.4",
-    "graphql-import": "^0.7.1",
-    "micro-cors": "^0.1.1"
+    "graphql-import": "^0.7.1"
   },
   "devDependencies": {
     "micro": "^9.3.4",
+    "micro-dev": "^3.0.0",
     "microrouter": "^3.1.3",
     "nodemon": "^1.19.2"
   },
