--- a/www/package.json
+++ b/www/package.json
@@ -11,28 +11,33 @@
   },
   "author": "",
   "license": "GNU GPLv3",
+  "engines": {
+    "node": "^10"
+  },
   "dependencies": {
     "@apollo/react-hooks": "^3.0.1",
-    "apollo-boost": "^0.1.28",
+    "@apollo/react-ssr": "^3.0.1",
+    "apollo-boost": "^0.4.4",
+    "apollo-cache-inmemory": "^1.6.3",
     "google-map-react": "^1.1.4",
     "graphql": "^14.5.4",
+    "isomorphic-unfetch": "^3.0.0",
     "moment": "^2.24.0",
-    "next": "^7.0.2",
-    "next-with-apollo": "^3.4.0",
+    "next": "^9.0.5",
+    "next-apollo": "^3.1.4",
     "nprogress": "^0.2.0",
-    "polished": "^2.3.3",
+    "polished": "^3.4.1",
     "react": "^16.9.0",
-    "react-apollo": "^2.5.8",
     "react-dom": "^16.9.0",
     "react-facebook": "^8.0.4",
-    "react-scroll-parallax": "^1.3.5",
+    "react-scroll-parallax": "^2.1.2",
     "styled-components": "^4.3.2",
     "styled-components-modifiers": "^1.2.4"
   },
   "devDependencies": {
     "@babel/core": "^7.5.5",
     "babel-jest": "^24.9.0",
-    "babel-plugin-module-resolver": "^3.1.3",
+    "babel-plugin-module-resolver": "^3.2.0",
     "babel-plugin-styled-components": "^1.10.6",
     "jest": "^24.9.0"
   }
