--- a/graph/package.json
+++ b/graph/package.json
@@ -2,7 +2,8 @@
   "main": "index.js",
   "version": "1.0.0",
   "scripts": {
-    "start": "micro",
+    "start": "",
+    "start:prod": "micro",
     "start:watch": "micro-dev"
   },
   "engines": {
@@ -15,9 +16,7 @@
   },
   "devDependencies": {
     "micro": "^9.3.4",
-    "micro-dev": "^3.0.0",
-    "microrouter": "^3.1.3",
-    "nodemon": "^1.19.2"
+    "micro-dev": "^3.0.0"
   },
   "name": "sandbargraph",
   "license": "GNU GPLv3",
