fixes eslint, prettier and package stack

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
   "editor.tabSize": 2,
-
+  "prettier.tabWidth": 2,
+  "eslint.autoFixOnSave": true,
+  "editor.formatOnSave": true,
   "workbench.colorCustomizations": {
     "titleBar.activeForeground": "#000",
     "titleBar.inactiveForeground": "#000000CC",
