--- a/www/package.json
+++ b/www/package.json
@@ -6,8 +6,8 @@
   },
   "scripts": {
     "dev": "next ./ -p 8000",
-    "build": "next build ./www",
-    "start": "next start ./www",
+    "build": "next build",
+    "start": "next start -p 4000",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint '**/*.js'"
   },
