--- a/now.json
+++ b/now.json
@@ -6,7 +6,7 @@
   },
   "builds": [
     {
-      "src": "graph/index.js",
+      "src": "api/index.js",
       "use": "@now/node",
       "config": {
         "includeFiles": ["**/*.graphql"]
@@ -15,7 +15,7 @@
     { "src": "www/package.json", "use": "@now/next" }
   ],
   "routes": [
-    { "src": "/graphql", "dest": "/graph/index.js" },
+    { "src": "/api", "dest": "/api/index.js" },
     { "src": "/(.*)", "dest": "/www/$1" }
   ]
 }
