--- a/www/package.json
+++ b/www/package.json
@@ -21,6 +21,7 @@
     "moment": "^2.24.0",
     "next": "^9.0.5",
     "next-apollo": "^3.1.4",
+    "now": "^16.2.0",
     "nprogress": "^0.2.0",
     "polished": "^3.4.1",
     "react": "^16.9.0",
