--- a/www/package.json
+++ b/www/package.json
@@ -6,22 +6,20 @@
   },
   "scripts": {
     "dev": "next ./ -p 8000",
-    "build": "next build ./www",
-    "start": "next start ./www",
+    "build": "next build",
+    "start": "next start -p 4000",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint '**/*.js'"
   },
   "dependencies": {
-    "@apollo/react-hooks": "^3.0.1",
-    "@apollo/react-ssr": "^3.0.1",
+    "@apollo/react-hooks": "^3.1.1",
+    "@apollo/react-ssr": "^3.1.1",
     "apollo-boost": "^0.4.4",
-    "apollo-cache-inmemory": "^1.6.3",
     "google-map-react": "^1.1.4",
-    "graphql": "^14.5.4",
+    "graphql": "^14.5.6",
     "isomorphic-unfetch": "^3.0.0",
     "moment": "^2.24.0",
-    "next": "^9.0.5",
-    "next-apollo": "^3.1.4",
+    "next": "^9.0.6",
     "nprogress": "^0.2.0",
     "polished": "^3.4.1",
     "react": "^16.9.0",
@@ -47,6 +45,7 @@
     "eslint-plugin-react": "^7.14.3",
     "eslint-plugin-react-hooks": "^2.0.1",
     "jest": "^24.9.0",
+    "now": "^16.2.0",
     "prettier-eslint": "^9.0.0"
   },
   "name": "sandbarwebsite",
