--- a/www/package.json
+++ b/www/package.json
@@ -44,6 +44,7 @@
     "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-react": "^7.14.3",
     "eslint-plugin-react-hooks": "^2.0.1",
+    "fslightbox-react": "^1.4.1",
     "jest": "^24.9.0",
     "now": "^16.2.0",
     "prettier-eslint": "^9.0.0"
