--- a/www/package.json
+++ b/www/package.json
@@ -22,6 +22,7 @@
     "next": "^9.2.1",
     "nprogress": "^0.2.0",
     "polished": "^3.4.4",
+    "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-facebook": "^8.1.4",
