add seo package; set prop types; console warnings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,5 +8,8 @@
     "titleBar.inactiveForeground": "#000000CC",
     "titleBar.activeBackground": "#FF7200",
     "titleBar.inactiveBackground": "#FF7200"
+  },
+  "editor.codeActionsOnSave": {
+    "source.fixAll.eslint": true
   }
 }
