--- a/www/package.json
+++ b/www/package.json
@@ -47,6 +47,7 @@
     "eslint-plugin-react-hooks": "^2.3.0",
     "fslightbox-react": "^1.4.9",
     "jest": "^24.9.0",
+    "next-seo": "^4.1.0",
     "now": "^16.7.3",
     "prettier-eslint": "^9.0.1"
   },
