--- a/www/package.json
+++ b/www/package.json
@@ -18,6 +18,7 @@
     "google-map-react": "^1.1.6",
     "graphql": "^14.6.0",
     "isomorphic-unfetch": "^3.0.0",
+    "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "next": "^9.2.1",
     "nprogress": "^0.2.0",
