--- a/www/package.json
+++ b/www/package.json
@@ -20,13 +20,13 @@
     "isomorphic-unfetch": "^3.0.0",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
-    "next": "^9.2.1",
-    "next-seo": "^4.1.0",
+    "next": "^9.3.0",
+    "next-seo": "^4.4.0",
     "nprogress": "^0.2.0",
     "polished": "^3.4.4",
     "prop-types": "^15.7.2",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
+    "react": "^16.13.0",
+    "react-dom": "^16.13.0",
     "react-facebook": "^8.1.4",
     "react-scroll-parallax": "^2.3.1",
     "styled-components": "^4.4.1",
@@ -34,8 +34,8 @@
     "styled-css-grid": "^1.2.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.8.4",
-    "babel-eslint": "^10.0.3",
+    "@babel/core": "^7.8.7",
+    "babel-eslint": "^10.1.0",
     "babel-jest": "^24.9.0",
     "babel-plugin-module-resolver": "^3.2.0",
     "babel-plugin-styled-components": "^1.10.7",
@@ -46,11 +46,11 @@
     "eslint-plugin-jest": "^22.21.0",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-prettier": "^3.1.2",
-    "eslint-plugin-react": "^7.18.3",
-    "eslint-plugin-react-hooks": "^2.3.0",
+    "eslint-plugin-react": "^7.19.0",
+    "eslint-plugin-react-hooks": "^2.5.0",
     "fslightbox-react": "^1.4.9",
     "jest": "^24.9.0",
-    "now": "^16.7.3",
+    "now": "16.7.3",
     "prettier-eslint": "^9.0.1"
   },
   "name": "sandbarwebsite",
