--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   },
   "scripts": {
     "dev": "next ./ -p 8000",
+    "prebuild": "node ./utilities/createPagesJson.js",
     "build": "next build",
     "start": "next start -p 4000",
     "test": "echo \"Error: no test specified\" && exit 1",
