--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "engines": {
-    "node": "^14"
+    "node": ">= 14.0.0"
   },
   "scripts": {
     "dev": "next ./ -p 8000",
